[gd_scene load_steps=8 format=2]

[ext_resource path="res://Monkey/BlueMonkey.gd" type="Script" id=1]
[ext_resource path="res://assets/cian_monkey_04.png" type="Texture" id=2]
[ext_resource path="res://assets/cian_monkey_03.png" type="Texture" id=3]
[ext_resource path="res://assets/cian_monkey_02.png" type="Texture" id=4]
[ext_resource path="res://assets/cian_monkey_01.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "jump",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.501, 23.3333 )

[node name="BlueMonkey" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "jump"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.54364, 1.08688 )
scale = Vector2( 0.72, 0.640001 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.2, 1.04 )

[node name="JumpSensor" type="RayCast2D" parent="."]
position = Vector2( -21, 14 )
enabled = true
cast_to = Vector2( -15, 0 )

[node name="PlayerSensor" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 0, -100 )

[node name="MonkeySensor" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true

[node name="SensorTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="SensorTimer" to="." method="_on_SensorTimer_timeout"]
